--- a/hdi/hdi_warehouse_3d/views/warehouse_analytics_views.xml
+++ b/hdi/hdi_warehouse_3d/views/warehouse_analytics_views.xml
@@ -63,7 +63,7 @@
     <record id="action_stock_picking_route" model="ir.actions.act_window">
         <field name="name">Picking Routes</field>
         <field name="res_model">stock.picking.route</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
     
     
