--- a/hdi/hdi_warehouse_3d/views/warehouse_analytics_views.xml
+++ b/hdi/hdi_warehouse_3d/views/warehouse_analytics_views.xml
@@ -147,7 +147,7 @@
                 <field name="max_picks"/>
                 <field name="avg_picks"/>
                 <templates>
-                    <t t-name="kanban-box">
+                    <t t-name="card">
                         <div class="oe_kanban_global_click">
                             <div class="oe_kanban_content">
                                 <div class="o_kanban_record_top">
@@ -338,7 +338,7 @@
                 <field name="bin_utilization_percentage"/>
                 <field name="total_picks"/>
                 <templates>
-                    <t t-name="kanban-box">
+                    <t t-name="card">
                         <div class="oe_kanban_global_click">
                             <div class="oe_kanban_content">
                                 <div class="o_kanban_record_top">
